--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -805,6 +805,8 @@ ru:
     sent: 
       email_sent: "<b>Мы только что послали уведомление со ссылкой подтверждения этому пользователю with</b>. Если они не нашли письмо, проверьте, не упало ли оно в спам или попробуйте другой адрес электронной почты. Если проблема не исчезнет, свяжитесь с администрацией."
   latest_announcement: "Read <a href='http://blog.teambox.com'>our blog</a> for the latest news about Teambox."
+  locales: 
+    ru: Русский
   not_found: 
     conversation: "Обсуждение %{id} не найдено в этом проекте."
     group: "Группа %{id} не существует."
@@ -957,7 +959,6 @@ ru:
       confirm_delete: "Вы действительно хотите навсегда удалить этот проект? ВОССТАНОВИТЬ ЕГО БУДЕТ НЕЛЬЗЯ. Если вы хотите просто скрыть или отложить его, используйте архивирование."
       forever: "Удалить этот проект навсегда"
       name: Название
-      name_description: "Введите краткое описательное название. Например, Веб-сайт для ИП"
       owner: Владелец
       owner_description: "Владелец — это главный ответственный за проект. Его нельзя убрать из проекта, пока владение не будет передано другому пользователю."
       permalink: Адрес
@@ -967,12 +968,10 @@ ru:
       archived: "Показать %{count} заархивированные проекты..."
       new_project: "Новый проект"
       projects: "Мои проекты"
-      refreshes: "Обновляется каждую минуту"
       rss: 
         description: "Обзор всех ваших проектов"
         title: "Обзор проектов"
       subscribe: "Подписаться на новости"
-      title: "RSS для всех ваших проектов"
     new: 
       create_an_example_project: "Первый раз в Teambox? <a href='%{link}'>Создайте пробный проект</a> и поиграйте с ним."
       created: "Ваш проект создан!"
@@ -1006,9 +1005,7 @@ ru:
       item4: "<b>Планируйте</b> дальнейшую работу и в ветке задач."
       item5: "<b>Делитесь информацией</b> в легко редактируемых страницах для каждого проекта."
     show: 
-      invite_people: "Пригласить людей..."
       new_task_list_link: "Новый список задач"
-      people_in_project: "Участники этого проекта"
       rss: 
         description: "Последние действия по проекту %{name}"
         title: "%{name}"
