--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -713,6 +713,8 @@ en:
       new_page: New Page
       cant_create: You don't have permission to create pages in this project
       all_pages: All Pages
+      reorder: Reorder
+      reorder_done: Done
   task_lists:
     errors:
       name:
